# searxng-mcp

./: Dockerfile  build_and_deploy.sh  pyproject.toml  start.sh
.run/: mcp.run.xml
searxng_mcp/: mcp.py
